# civitai-data-manager

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
civitai_manager/: __init__.py  main.py
civitai_manager/src/: __init__.py
civitai_manager/src/core/: __init__.py  metadata_manager.py
civitai_manager/src/migrations/v1_5_0/: migrate_filenames.py
civitai_manager/src/utils/: file_tracker.py
civitai_manager/src/utils/html_generators/: browser_page.py  model_page.py
src/civitai_manager/core/: metadata_manager.py
